--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ a {
 
 body {
   color: #3a3a59;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 h1 {
@@ -96,9 +96,9 @@ p, a {
 
 .btn {
   border-radius: 5px;
-  box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
   display: inline-block;
-  transition: .1s ease-in-out;
+  transition: .2s ease-in-out;
 }
 
 .btn:hover {
@@ -124,7 +124,7 @@ p, a {
 }
 
 .mv {
-  background: linear-gradient(45deg, #81eadb, rgba(152, 225, 251, 0.9), #2f87bf), url(../img/mv_bg.jpg) center center;
+  background: linear-gradient(45deg, rgba(129, 234, 219, 0.9), #98e1fb, rgba(47, 135, 191, 0.9)), url(../img/mv_bg.jpg) center center;
   background-size: cover;
   height: calc(100vh - 200px);
 }
@@ -143,10 +143,15 @@ p, a {
 
 .mv .mv-ttl {
   font-size: 3.6em;
+  font-weight: 700;
   margin-bottom: 24px;
+}
+
+.mv .mv-wrapper {
+  margin-bottom: 56px;
 }
 
 .mv .mv-txt {
   font-size: 2.4em;
-  margin-bottom: 56px;
+  margin-bottom: 8px;
 }
