--- a/sass/module/_mv.scss
+++ b/sass/module/_mv.scss
@@ -1,5 +1,5 @@
 .mv{
-  background: linear-gradient(45deg, rgba(129,234,219, 1),rgba(152,225,251, .9),rgba(47,135,191, 1)),url(../img/mv_bg.jpg) center center;
+  background: linear-gradient(45deg, rgba(129,234,219, .9),rgba(152,225,251, 1),rgba(47,135,191, .9)),url(../img/mv_bg.jpg) center center;
   background-size: cover;
   height: calc(100vh - 200px);
 
@@ -18,11 +18,16 @@
 
   .mv-ttl{
     font-size: 3.6em;
+    font-weight: 700;
     margin-bottom: 24px;
+  }
+
+  .mv-wrapper{
+    margin-bottom: 56px;
   }
 
   .mv-txt{
     font-size: 2.4em;
-    margin-bottom: 56px;
+    margin-bottom: 8px;
   }
 }
