--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,24 +1,36 @@
-body{
+body {
   color: $font-color;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
-h1{
+h1 {
   font-size: 3.2em;
+  word-wrap: normal;
+  line-height: 1.5;
 }
 
-h2{
-  font-size: 2.4em;
+h2 {
+  font-size: 3.2em;
+  text-align: center;
+  font-weight: 700;
+  margin-bottom: 56px;
 }
 
-h3{
+h3 {
   font-size: 1.8em;
 }
 
-h4{
+p {
   font-size: 1.6em;
+  line-height: 1.8;
+  letter-spacing: 0.1em;
+  word-wrap: break-word;
 }
 
-p,a{
-  font-size: 1.6em;
+section {
+  padding: 80px 0;
+
+  @include mq("sp") {
+    padding: 40px 0;
+  }
 }
