--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,6 @@ a {
 }
 
 body {
-  color: #3a3a59;
   font-family: "Roboto", sans-serif;
 }
 
@@ -150,6 +149,59 @@ section {
   transform: translateY(-3px);
 }
 
+.header {
+  background: rgba(255, 255, 255, 0);
+  height: 60px;
+  position: relative;
+  top: 0;
+  width: 100%;
+}
+
+.header-wrapper {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  height: 100%;
+  justify-content: flex-start;
+}
+
+.header-logo {
+  color: #fff;
+  font-size: 1.6rem;
+}
+
+.header-nav {
+  margin-left: auto;
+}
+
+@media screen and (max-width: 767px) {
+  .header-nav {
+    display: none;
+  }
+}
+
+.header-nav__list {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
+.header-nav__list-item {
+  margin-right: 40px;
+}
+
+.header-nav__list-link {
+  color: #fff;
+  font-size: 1.6rem;
+}
+
+.header-nav__list-link:hover {
+  opacity: 0.5;
+}
+
 .inner {
   height: 100%;
   margin: 0 auto;
@@ -168,6 +220,7 @@ section {
   background: linear-gradient(45deg, rgba(129, 234, 219, 0.9), #98e1fb, rgba(47, 135, 191, 0.9)), url(../img/mv_bg.jpg) center center;
   background-size: cover;
   height: calc(100vh - 160px);
+  margin-top: -60px;
 }
 
 @media screen and (max-width: 767px) {
@@ -278,7 +331,6 @@ section {
 }
 
 .service .service-list .service-list__txt {
-  color: #626297;
   font-size: 1.6em;
   font-weight: 300;
 }
