--- a/sass/module/_header.scss
+++ b/sass/module/_header.scss
@@ -1,3 +1,43 @@
-.header{
-  
+.header {
+  position: relative;
+  top: 0;
+
+  height: 60px;
+  width: 100%;
+  background: rgba(255, 255, 255, 0);
+}
+
+.header-wrapper {
+  @include flex($align: center);
+  height: 100%;
+}
+
+.header-logo {
+  font-size: 1.6rem;
+  color: #fff;
+}
+
+.header-nav {
+  margin-left: auto;
+
+  @include mq("sp") {
+    display: none;
+  }
+}
+
+.header-nav__list {
+  @include flex();
+}
+
+.header-nav__list-item {
+  margin-right: 40px;
+}
+
+.header-nav__list-link {
+  font-size: 1.6rem;
+  color: #fff;
+
+  &:hover {
+    opacity: 0.5;
+  }
 }
