--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,6 +1,8 @@
 body {
   // color: $font-color;
-  font-family: "Roboto", sans-serif;
+  // font-family: "Roboto", sans-serif;
+  font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", "メイリオ", "Hiragino Kaku Gothic ProN", "Hiragino Sans", sans-serif;
+  font-weight: 500;
 }
 
 h1 {
@@ -25,6 +27,10 @@ p {
   line-height: 1.8;
   letter-spacing: 0.1em;
   word-wrap: break-word;
+}
+
+span {
+  font-size: 1.2em;
 }
 
 section {
