--- a/sass/module/_btn.scss
+++ b/sass/module/_btn.scss
@@ -19,3 +19,10 @@
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
   }
 }
+
+.btn--works {
+  transition: none;
+  &:hover {
+    opacity: 0.7;
+  }
+}
