--- a/sass/module/_btn.scss
+++ b/sass/module/_btn.scss
@@ -5,7 +5,7 @@
   transition: 0.2s ease-in-out;
 
   .btn__txt {
-    font-size: 1.6em;
+    font-size: 1.6rem;
     display: block;
     padding: 16px 24px;
   }
