--- a/sass/module/_header.scss
+++ b/sass/module/_header.scss
@@ -1,14 +1,13 @@
 .header {
   position: relative;
   top: 0;
-
   height: 60px;
   width: 100%;
   background: rgba(255, 255, 255, 0);
 }
 
 .header-wrapper {
-  @include flex($align: center);
+  @include flex($align: center, $justify: space-between);
   height: 100%;
 }
 
