--- a/sass/module/_service.scss
+++ b/sass/module/_service.scss
@@ -51,3 +51,24 @@
   font-size: 1.6em;
   font-weight: 300;
 }
+
+.service-skill {
+  margin-left: 48px;
+
+  @include mq("sp") {
+    margin-left: 0;
+  }
+}
+
+.service-skill__ttl {
+  font-size: 2.4em;
+  margin-bottom: 16px;
+
+  @include mq("sp") {
+    text-align: center;
+  }
+}
+
+.service-skill__txt {
+  margin-left: 16px;
+}
