--- a/sass/module/_career.scss
+++ b/sass/module/_career.scss
@@ -1,5 +1,5 @@
 .career {
-  margin-bottom: 72px;
+  margin-bottom: 64px;
 }
 
 .career__ttl {
@@ -7,11 +7,68 @@
   margin-bottom: 24px;
 }
 
-.career-th {
+.career-list {
+  font-size: 1.6rem;
 }
 
-.career__year {
-  width: 60px;
+.career-list__item {
+  margin-bottom: 32px;
+  padding-left: 16px;
+  font-size: 1.4rem;
+}
+
+.career-list__item-top {
+  margin: 0 0 16px;
+  font-size: 1.6rem;
+}
+
+.career-list__item-year {
+  display: inline;
+}
+
+.career-list__item-name {
+  display: inline;
+}
+
+.career-list__item-toggle {
+  font-size: 1.4rem;
+  margin-left: 8px;
+  padding: 8px;
+  cursor: pointer;
+
+  &:hover {
+    opacity: 0.5;
+  }
+}
+.career-list__item-toggle-txt {
+  display: inline;
+  font-size: inherit;
+}
+
+.career-list__item-icon {
+}
+
+.career-list__item-bottom {
+  margin: 16px 0 16px 16px;
+}
+
+.career-list__item-content {
+}
+
+.career-list__item-ttl-wrapper {
+  margin-bottom: 16px;
+}
+
+.career-list__item-ttl {
+  display: inline;
+  border-bottom: 1px solid #000;
+  padding-bottom: 4px;
+  line-height: 1.8;
+}
+
+.career-list__item-txt {
+  font-size: 1.4rem;
+  margin-bottom: 8px;
 }
 
 .career-cotent {
