--- a/sass/module/_works.scss
+++ b/sass/module/_works.scss
@@ -16,12 +16,12 @@
   &:nth-child(3n) {
     margin-right: 0;
 
-    @include mq("sp") {
+    @include mq('sp') {
       margin-right: 0;
     }
   }
 
-  @include mq("sp") {
+  @include mq('sp') {
     width: 100%;
     margin-right: 0;
   }
@@ -43,7 +43,9 @@
 
 .works-list__img {
   width: 100%;
+  max-height: 196px;
   margin-bottom: 8px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
 }
 
 .works-list__cat {
@@ -73,4 +75,5 @@
 .works-btn {
   display: block;
   text-align: center;
+  margin-top: 32px;
 }
