--- a/sass/module/_btn.scss
+++ b/sass/module/_btn.scss
@@ -16,8 +16,9 @@
   background-color: $emp-color;
 
   &:hover {
-    transform: translateY(-3px);
+    transform: translateY(3px);
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
+    opacity: 0.9;
   }
 }
 
