--- a/sass/module/_service.scss
+++ b/sass/module/_service.scss
@@ -16,12 +16,12 @@
   &:nth-child(3n) {
     margin-right: 0;
 
-    @include mq("sp") {
+    @include mq('sp') {
       margin-right: 0;
     }
   }
 
-  @include mq("sp") {
+  @include mq('sp') {
     width: 100%;
     margin-right: 0;
   }
@@ -38,24 +38,28 @@
 .service-list__disc {
   padding-left: 48px;
 
-  @include mq("sp") {
+  @include mq('sp') {
     padding-left: 32px;
   }
 }
 
 .service-list__ttl {
-  margin-bottom: 32px;
+  margin-bottom: 24px;
+
+  @include mq('sp') {
+    margin-bottom: 16px;
+  }
 }
 
 .service-list__txt {
-  font-size: 1.6em;
+  // font-size: 1.6em;
   font-weight: 300;
 }
 
 .service-skill {
   margin-left: 48px;
 
-  @include mq("sp") {
+  @include mq('sp') {
     margin-left: 0;
   }
 }
@@ -64,7 +68,7 @@
   font-size: 2.4em;
   margin-bottom: 16px;
 
-  @include mq("sp") {
+  @include mq('sp') {
     text-align: center;
   }
 }
