--- a/sass/module/_works.scss
+++ b/sass/module/_works.scss
@@ -43,7 +43,6 @@
 
 .works-list__img {
   width: 100%;
-  max-height: 196px;
   margin-bottom: 8px;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
 }
@@ -69,6 +68,7 @@
 
   &:hover {
     border-bottom: 1px solid #000;
+    opacity: 0.5;
   }
 }
 
