--- a/sass/module/_mv.scss
+++ b/sass/module/_mv.scss
@@ -20,16 +20,17 @@
     display: table-cell;
     vertical-align: middle;
     color: #fff;
+    padding-top: 50px;
   }
 
   .mv-ttl {
-    font-size: 3.6em;
+    font-size: 4em;
     font-weight: 700;
-    margin-bottom: 32px;
+    margin-bottom: 24px;
     text-align: left;
 
     @include mq('sp') {
-      font-size: 2.4em;
+      font-size: 3.2em;
     }
   }
 
@@ -43,10 +44,11 @@
   }
 
   .mv-txt {
-    font-size: 2.4em;
+    font-size: 2em;
 
     @include mq('sp') {
       font-size: 1.6em;
+      margin-bottom: 4px;
     }
   }
 }
